Simplify compressed blocks for villager trading